# roast

./: CHANGELOG  CHANGELOG.md  Cargo.toml  README.md  justfile  raw.service  recomprizz.service  roast.service  roast_scm.service  vendor.tar.zst
.github/workflows/: ci.yml  close-prs.yml
.woodpecker/: build.yml  ci.yml
libroast/: Cargo.toml  README.md
libroast/src/: common.rs  compress.rs  consts.rs  decompress.rs  lib.rs  utils.rs
libroast/src/operations/: cli.rs  mod.rs  raw.rs  recomprizz.rs  roast.rs
libroast/src/operations/roast/: helpers.rs  mod.rs
libroast/src/operations/roast_scm/: mod.rs
libroast/src/scm/: clone.rs  describe.rs  mod.rs  pull.rs
libroast/tests/: obs_scm.rs  repro.rs  scm.rs  shame.rs  test_utils.rs
roast-cli/: Cargo.toml  README.md
roast-cli/src/: cli.rs  lib.rs  main.rs  raw.rs  recomprizz.rs  roast.rs  roast_scm.rs
shit/: Cargo.toml
shit/src/: cli.rs  main.rs
