[package]
name = "libroast"
description = "Create archive tarballs and roast them! Library crate"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tracing = { version = "0.1", features = [
        "max_level_trace",
        "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = { version = "1.0" }
infer = "0.15"
tar = "0.4"
tempfile = "3.8"
xz2 = "0.1"
zstd = { version = "0.12", features = ["pkg-config", "zstdmt"] }
bzip2 = { version = "0.4" }
walkdir = "2.4"
clap = { version = "4.5.19", features = ["derive"] }
terminfo = "0.9.0"
glob = "0.3"

[dev-dependencies]
terminfo = "0.9.0"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
sha3 = { version = "0.11.0-pre.4" }
hex-literal = "0.4.1"

