[package]
name = "libroast"
description = "Create archive tarballs and roast them! Library crate"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tracing = { version = "0.1", features = [
        "max_level_trace",
        "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = { version = "1.0" }
infer = "0.16"
tar = "0.4"
tempfile = "3.8"
xz2 = "0.1"
zstd = { version = "0.13", features = ["pkg-config", "zstdmt"] }
bzip2 = { version = "0.4" }
walkdir = "2.4"
clap = { workspace = true, features = ["help", "derive", "wrap_help"] }
terminfo = "0.9.0"
glob = "0.3"
rayon = "1.10.0"
git2 = "0.20.1"
url = "2.5.4"

[dev-dependencies]
terminfo = "0.9.0"
test-log = { version = "^0.2", features = ["trace"] }
sha3 = { version = "0.11.0-pre.4" }
hex-literal = "0.4.1"

[lints]
workspace = true
